добавляє іконки секції "Team"

--- a/index.html
+++ b/index.html
@@ -160,6 +160,37 @@
                         <div class="card-name">
                             <h3 class="team-member card">Игорь Демьяненко</h3>
                             <p class="prof card" lang="en">Product Designer</p>
+
+                            <ul class="list-icon list">
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
 
                     </li>
@@ -168,6 +199,36 @@
                         <div class="card-name">
                             <h3 class="team-member card">Ольга Репина</h3>
                             <p class="prof card" lang="en">Frontend Developer</p>
+                            <ul class="list-icon list">
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
 
                     </li>
@@ -176,6 +237,36 @@
                         <div class="card-name">
                             <h3 class="team-member card">Николай Тарасов</h3>
                             <p class="prof card" lang="en">Marketing</p>
+                            <ul class="list-icon list">
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
 
                     </li>
@@ -184,6 +275,36 @@
                         <div class="card-name">
                             <h3 class="team-member card">Михаил Ермаков</h3>
                             <p class="prof card" lang="en">UI Designer</p>
+                            <ul class="list-icon list">
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="item-icon">
+                                    <a href="#" class="link-icon">
+                                        <svg width="20" height="20" class="soc-icon">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
 
                     </li>
