доповнює усі сторінки і стилі

--- a/index.html
+++ b/index.html
@@ -164,28 +164,28 @@
                             <ul class="list-icon list">
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -202,28 +202,28 @@
                             <ul class="list-icon list">
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -240,28 +240,28 @@
                             <ul class="list-icon list">
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -278,28 +278,28 @@
                             <ul class="list-icon list">
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="item-icon">
                                     <a href="#" class="link-icon">
-                                        <svg width="20" height="20" class="soc-icon">
+                                        <svg width="20" height="20" class="logo-icon">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -310,25 +310,111 @@
                     </li>
                 </ul>
             </div>
+        </section>
 
+        <!-- Секція Постійні клієнти -->
+        <section class="customers section">
+            <div class="conteiner">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="list-icon list">
+                    <li class="logo-item">
+                        <a href="#" class="logo-link">
+                            <svg width="106" height="60" class="logo-icon">
+                                <use href="./images/icons.svg#icon-Logo_1"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="logo-item">
+                        <a href="#" class="logo-link">
+                            <svg width="106" height="60" class="logo-icon">
+                                <use href="./images/icons.svg#icon-Logo_2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="logo-item">
+                        <a href="#" class="logo-link">
+                            <svg width="106" height="60" class="logo-icon">
+                                <use href="./images/icons.svg#icon-Logo_3"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="logo-item">
+                        <a href="#" class="logo-link">
+                            <svg width="106" height="60" class="logo-icon">
+                                <use href="./images/icons.svg#icon-Logo_4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="logo-item">
+                        <a href="#" class="logo-link">
+                            <svg width="106" height="60" class="logo-icon">
+                                <use href="./images/icons.svg#icon-Logo_5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="logo-item">
+                        <a href="#" class="logo-link">
+                            <svg width="106" height="60" class="logo-icon">
+                                <use href="./images/icons.svg#icon-Logo_6"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
     <!-- Підвал -->
     <footer class="lowerPart">
-        <div class="conteiner">
-            <a class="logo link" href="./">Web<span class="logo-accent-footer">Studio</span> </a>
-            <address class="contacts">
-                <p class="add">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="contact-list list">
-                    <li class="contact-list-item">
-                        <a class="contact-list-link link" href="mailto:info@example.com">info@example.com</a>
+        <div class="conteiner footer-column">
+            <div class="footer-cont">
+                <a class="logo link" href="./">Web<span class="logo-accent-footer">Studio</span> </a>
+                <address class="contacts">
+                    <p class="add">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="contact-list list">
+                        <li class="contact-list-item">
+                            <a class="contact-list-link link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="contact-list-item">
+                            <a class="contact-list-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-soc-icon">
+                <p class="footer-par">присоединяйтесь</p>
+                <ul class="list-icon list">
+                    <li class="item-icon">
+                        <a href="#" class="link-icon lower">
+                            <svg width="20" height="20" class="logo-icon">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="contact-list-item">
-                        <a class="contact-list-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="item-icon">
+                        <a href="#" class="link-icon lower">
+                            <svg width="20" height="20" class="logo-icon">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-icon">
+                        <a href="#" class="link-icon lower">
+                            <svg width="20" height="20" class="logo-icon">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-icon">
+                        <a href="#" class="link-icon lower">
+                            <svg width="20" height="20" class="logo-icon">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
+
         </div>
 
     </footer>
