--- a/portfolio.html
+++ b/portfolio.html
@@ -39,10 +39,21 @@
             </nav>
             <ul class="hat-list list">
                 <li class="hat-list-item">
-                    <a class="contact-list-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contact-list-link link" href="mailto:info@devstudio.com">
+                        <svg width="16" height="12" class="hat-icon">
+                            <use href="./images/icons.svg#icon-envelope"></use>
+                        </svg>
+
+                        info@devstudio.com
+                    </a>
                 </li>
                 <li class="hat-list-item">
-                    <a class="contact-list-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="contact-list-link link" href="tel:+380961111111">
+                        <svg width="10" height="16" class="hat-icon">
+                            <use href="./images/icons.svg#icon-smartphone"></use>
+                        </svg>
+                        +38 096 111 11 11
+                    </a>
                 </li>
             </ul>
         </div>
@@ -176,20 +187,57 @@
 
     <!-- Підвал -->
     <footer class="lowerPart">
-        <div class="conteiner">
-            <a class="logo link" href="./">Web<span class="logo-accent-footer">Studio</span> </a>
-            <address class="contacts">
-                <p class="add">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul class="contact-list list">
-                    <li class="contact-list-item">
-                        <a class="contact-list-link link" href="mailto:info@example.com">info@example.com</a>
+        <div class="conteiner footer-column">
+            <div class="footer-cont">
+                <a class="logo link" href="./">Web<span class="logo-accent-footer">Studio</span> </a>
+                <address class="contacts">
+                    <p class="add">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul class="contact-list list">
+                        <li class="contact-list-item">
+                            <a class="contact-list-link link" href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="contact-list-item">
+                            <a class="contact-list-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+            <div class="footer-soc-icon">
+                <p class="footer-par">присоединяйтесь</p>
+                <ul class="list-icon list">
+                    <li class="item-icon">
+                        <a href="#" class="link-icon lower">
+                            <svg width="20" height="20" class="logo-icon">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="contact-list-item">
-                        <a class="contact-list-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <li class="item-icon">
+                        <a href="#" class="link-icon lower">
+                            <svg width="20" height="20" class="logo-icon">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-icon">
+                        <a href="#" class="link-icon lower">
+                            <svg width="20" height="20" class="logo-icon">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-icon">
+                        <a href="#" class="link-icon lower">
+                            <svg width="20" height="20" class="logo-icon">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
                     </li>
                 </ul>
-            </address>
+            </div>
+
         </div>
+
     </footer>
 </body>
 
